syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "data.proto";

option go_package = "github.com/linhhuynhcoding/web-my-pham/server/api";

service Service {
  // Login
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/login"
      body: "*"
    };
  }
  // Register
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/api/register"
      body: "*"
    };
  }

  // Load Home Screen
  rpc LoadHomeScreen(LoadHomeScreenRequest) returns (LoadHomeScreenResponse) {
    option (google.api.http) = {
      get: "/api/home"
    };
  }

  // Load Products by Category
  rpc LoadProductsByCategory(LoadProductsByCategoryRequest) returns (LoadProductsByCategoryResponse) {
    option (google.api.http) = {
      // The category_id will be part of the URL path.
      get: "/api/categories/{category_id}/products"
    };
  }

  // Load Product Detail Page
  rpc LoadProductDetailPage(LoadProductDetailPageRequest) returns (LoadProductDetailPageResponse) {
    option (google.api.http) = {
      get: "/api/products/{product_id}"
    };
  }

  // Load Profile Info Page
  rpc LoadProfileInfoPage(LoadProfileInfoPageRequest) returns (LoadProfileInfoPageResponse) {
    option (google.api.http) = {
      get: "/api/profile"
    };
  }

  // Load User Order Page
  rpc LoadUserOrderPage(LoadUserOrderPageRequest) returns (LoadUserOrderPageResponse) {
    option (google.api.http) = {
      get: "/api/orders_history"
    };
  }

  // Load Cart Page
  rpc LoadCartPage(LoadCartPageRequest) returns (LoadCartPageResponse) {
    option (google.api.http) = {
      get: "/api/cart"
    };
  }

  // Add Cart Item
  rpc AddCartItem(AddCartItemRequest) returns (AddCartItemResponse) {
    option (google.api.http) = {
      post: "/api/cart/items"
      body: "*"
    };
  }

  // Update Cart Item
  rpc UpdateCartItem(UpdateCartItemRequest) returns (UpdateCartItemResponse) {
    option (google.api.http) = {
      put: "/api/cart/items/{cart_item_id}"
      body: "*"
    };
  }

  // Delete Cart Item
  rpc DeleteCartItem(DeleteCartItemRequest) returns (DeleteCartItemResponse) {
    option (google.api.http) = {
      delete: "/api/cart/items/{cart_item_id}"
    };
  }

  // Load Checkout Page
  rpc LoadCheckoutPage(LoadCheckoutPageRequest) returns (LoadCheckoutPageResponse) {
    option (google.api.http) = {
      post: "/api/checkout/load"
      body: "*"
    };
  }

  // Place Order
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse) {
    option (google.api.http) = {
      post: "/api/orders"
      body: "*"
    };
  }

  // Get Order Detail
  rpc GetOrderDetail(GetOrderDetailRequest) returns (GetOrderDetailResponse) {
    option (google.api.http) = {
      get: "/api/orders/{order_id}"
    };
  }

  // Load Accounts
  rpc LoadAccounts(LoadAccountsRequest) returns (LoadAccountsResponse) {
    option (google.api.http) = {
      get: "/api/accounts"
    };
  }

  // --- Admin: Product Management ---

  
  // List product
  rpc ListProduct(ListProductRequest) returns (ListProductResponse) {
    option (google.api.http) = {
      post: "/api/admin/list-products"
      body: "*"
    };
  }

  // Create a new product
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {
    option (google.api.http) = {
      post: "/api/admin/products"
      body: "*"
    };
  }

  // Update an existing product
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {
    option (google.api.http) = {
      put: "/api/admin/products/{product_id}"
      body: "*"
    };
  }

  // Delete a product
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {
    option (google.api.http) = {
      delete: "/api/admin/products/{product_id}"
    };
  }

  // GetProductDetail
  rpc GetProductDetail(GetProductDetailRequest) returns (GetProductDetailResponse) {
    option (google.api.http) = {
      get: "/api/admin/products/{product_id}"
    };
  }

  // --- Admin: Order Management ---

  // Load all orders for admin
  rpc AdminLoadOrders(AdminLoadOrdersRequest) returns (AdminLoadOrdersResponse) {
    option (google.api.http) = {
      post: "/api/admin/orders",
      body: "*"
    };
  }

  // Update order status
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse) {
    option (google.api.http) = {
      put: "/api/admin/orders/{order_id}/status"
      body: "*"
    };
  }

  // --- Admin: Category Management ---

  // Create a new category
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse) {
    option (google.api.http) = {
      post: "/api/admin/categories"
      body: "*"
    };
  }

  // List all categories
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse) {
    option (google.api.http) = {
      get: "/api/admin/categories/list"
    };
  }

  // Update an existing category
  rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse) {
    option (google.api.http) = {
      put: "/api/admin/categories/{category_id}"
      body: "*"
    };
  }

  // Delete a category
  rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryResponse) {
    option (google.api.http) = {
      delete: "/api/admin/categories/{category_id}"
    };
  }

  // --- Admin: Brand Management ---

  // Create a new brand
  rpc CreateBrand(CreateBrandRequest) returns (CreateBrandResponse) {
    option (google.api.http) = {
      post: "/api/admin/brands"
      body: "*"
    };
  }

  // List all brands
  rpc ListBrands(ListBrandsRequest) returns (ListBrandsResponse) {
    option (google.api.http) = {
      get: "/api/admin/brands/list"
    };
  }

  // Update an existing brand
  rpc UpdateBrand(UpdateBrandRequest) returns (UpdateBrandResponse) {
    option (google.api.http) = {
      put: "/api/admin/brands/{brand_id}"
      body: "*"
    };
  }

  // Delete a brand
  rpc DeleteBrand(DeleteBrandRequest) returns (DeleteBrandResponse) {
    option (google.api.http) = {
      delete: "/api/admin/brands/{brand_id}"
    };
  }

  // Upload File
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse) {
        option (google.api.http) = {
        post: "/v1/upload"
        body: "*"
        };
    }
}

message LoginRequest {
  string email = 1 [(validate.rules).string.email = true]; 
  string password  = 2  [(validate.rules).string = {min_len: 1}];
}
message LoginResponse {
  string access_token = 1;
  User user = 2;
}

message RegisterRequest{
  string email = 1 [(validate.rules).string.email = true]; 
  string password  = 2  [(validate.rules).string = {min_len: 1}];
  string confirm_password  = 3  [(validate.rules).string = {min_len: 1}];
  string name = 4 [(validate.rules).string = {min_len: 1}];
}

message RegisterResponse{}

message LoadHomeScreenRequest {}

message LoadHomeScreenResponse {
  repeated Product bestseller_products = 1;
  repeated Product top_search_products = 2;
  repeated Category categories = 3;
  repeated Brand brands = 4;
}

message PriceRange {
  double min = 1;
  double max = 2;
}

message ProductFilter {
  PriceRange price_range = 1;
  repeated int32 brand_ids = 2;
  string keyword = 3;
  repeated int32 category_ids = 4;
}

enum ProductOrderBy {
  BEST_SELLER = 0;
  PRICE_ASC = 1;
  PRICE_DESC = 2;
}

message LoadProductsByCategoryRequest {
  int32 category_id = 1 [(validate.rules).int32.gt = 0];
  ProductFilter filter = 2;
  ProductOrderBy order_by = 3;
  Pagination pagination = 4;
}

message LoadProductsByCategoryResponse {
  repeated Product products = 1;
  Pagination pagination = 2;
  repeated Brand brands = 3;
}

message LoadProductDetailPageRequest {
  int32 product_id = 1 [(validate.rules).int32.gt = 0];
}

message LoadProductDetailPageResponse {
  Product product = 1;
  repeated Product other_same_category_products = 2; // Renamed for clarity
  repeated Product other_same_brand_products = 3;    // Renamed for clarity
}

message LoadProfileInfoPageRequest {
  // No specific request parameters needed for loading the current user's profile.
}

message LoadProfileInfoPageResponse {
  User user = 1;
}

message LoadUserOrderPageRequest {
  Pagination pagination = 1; // Request pagination details for orders
}

message LoadUserOrderPageResponse {
  repeated Order orders = 1;
  Pagination pagination = 2;
}

message LoadCartPageRequest {
  // No specific request parameters needed for loading the current user's cart.
}

message LoadCartPageResponse {
  repeated CartItem items = 1;
  double total_price = 2;
  double check_out_bill = 3;
}

message AddCartItemRequest {
  int32 product_id = 1 [(validate.rules).int32.gt = 0];
  int32 quantity = 2 [(validate.rules).int32.gt = 0];
}

message AddCartItemResponse {
  CartItem item = 1;
}


message UpdateCartItemRequest {
  int32 cart_item_id = 1 [(validate.rules).int32.gt = 0];
  int32 quantity = 2 [(validate.rules).int32.gt = 0];
}

message UpdateCartItemResponse {
  CartItem item = 1;
}

message DeleteCartItemRequest {
  int32 cart_item_id = 1 [(validate.rules).int32.gt = 0];
}

message DeleteCartItemResponse {

}

message LoadCheckoutPageRequest {
  repeated int32 cart_item_ids = 1 [(validate.rules).repeated .min_items = 1];
}

message OrderInfo {
  repeated CartItem items = 1;
  double shipping_fee = 2;
  double total_price = 3;
  int32 id = 4;
}

message OrderDetailForm {
  repeated PaymentMethod available_payment_methods = 1;
}

message LoadCheckoutPageResponse {
  OrderInfo order_info = 1;
  OrderDetailForm order_detail_form = 2;
}

message PlaceOrderRequest {
  message OrderDetailForm {
    string payment_method = 1;
    string notes = 2;
    string address = 3;
    string phone = 4;
  }
  OrderDetailForm order_detail_form = 1;
  repeated int32 cart_item_ids = 2;
}
message PlaceOrderResponse {
  OrderInfo order_info = 1;
}

message GetOrderDetailRequest {
  int32 order_id = 1;
}
message GetOrderDetailResponse {
  Order order = 1;
}

message LoadAccountsRequest {
  Pagination pagination = 1;
}
message LoadAccountsResponse {
  repeated User users = 1;
  Pagination pagination = 2;
}

// --- Admin Product Management Messages ---

message CreateProductRequest {
  string name = 2;
  double price = 3;
  string description = 4;
  string image_url = 5;
  int32 category_id = 6;
  int32 brand_id = 7;
  int32 stock = 8;
  int32 buy_turn = 9;
}

message CreateProductResponse {
  Product product = 1;
}

message UpdateProductRequest {
  int32 product_id = 1 [(validate.rules).int32.gt = 0];
  google.protobuf.StringValue name = 2;
  google.protobuf.DoubleValue price = 3;
  google.protobuf.StringValue description = 4;
  google.protobuf.StringValue image_url = 5;
  google.protobuf.Int32Value category_id = 6;
  google.protobuf.Int32Value brand_id = 7;
  google.protobuf.Int32Value stock = 8;
  google.protobuf.Int32Value buy_turn = 9;
}

message UpdateProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  int32 product_id = 1 [(validate.rules).int32.gt = 0];
}

message DeleteProductResponse {}

// --- Admin Order Management Messages ---

message AmountRange {
  double min = 1;
  double max = 2;
}

message DateRange {
  google.protobuf.Timestamp start_date = 1;
  google.protobuf.Timestamp end_date = 2;
}

message AdminOrderFilter {
  AmountRange total_amount_range = 1;
  DateRange date_range = 2;
  google.protobuf.StringValue status = 3;
  google.protobuf.StringValue user_email = 4;
  google.protobuf.Int32Value order_id = 5;
}

enum AdminOrderOrderBy {
  ORDER_DATE_DESC = 0;
  ORDER_DATE_ASC = 1;
  TOTAL_AMOUNT_DESC = 2;
  TOTAL_AMOUNT_ASC = 3;
}

message AdminLoadOrdersRequest {
  Pagination pagination = 1;
  AdminOrderFilter filter = 2;
  AdminOrderOrderBy order_by = 3;
}

message AdminLoadOrdersResponse {
  repeated Order orders = 1;
  Pagination pagination = 2;
}

message UpdateOrderStatusRequest {
  int32 order_id = 1 [(validate.rules).int32.gt = 0];
  string status = 2 [(validate.rules).string.min_len = 1];
}

message UpdateOrderStatusResponse {
  Order order = 1;
}

// --- Admin Category Management Messages ---

message CreateCategoryRequest {
  string name = 1 [(validate.rules).string.min_len = 1];
  string image_url = 2;
}

message CreateCategoryResponse {
  Category category = 1;
}

message ListCategoriesRequest {
  Pagination pagination = 1;
}

message ListCategoriesResponse {
  repeated Category categories = 1;
  Pagination pagination = 2;
}

message UpdateCategoryRequest {
  int32 category_id = 1 [(validate.rules).int32.gt = 0];
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue image_url = 3;
}

message UpdateCategoryResponse {
  Category category = 1;
}

message DeleteCategoryRequest {
  int32 category_id = 1 [(validate.rules).int32.gt = 0];
}

message DeleteCategoryResponse {}

// --- Admin Brand Management Messages ---

message CreateBrandRequest {
  string name = 1 [(validate.rules).string.min_len = 1];
  string image_url = 2;
}

message CreateBrandResponse {
  Brand brand = 1;
}

message ListBrandsRequest {
  Pagination pagination = 1;
}

message ListBrandsResponse {
  repeated Brand brands = 1;
  Pagination pagination = 2;
}

message UpdateBrandRequest {
  int32 brand_id = 1 [(validate.rules).int32.gt = 0];
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue image_url = 3;
}

message UpdateBrandResponse {
  Brand brand = 1;
}

message DeleteBrandRequest {
  int32 brand_id = 1 [(validate.rules).int32.gt = 0];
}

message DeleteBrandResponse {}

message ListProductRequest {
  Pagination pagination = 1;
  ProductFilter filter = 2;
  ProductOrderBy order_by = 3;
}
message ListProductResponse {
  repeated Product products = 1;
  Pagination pagination = 2;
}

message GetProductDetailRequest {
  int32 product_id = 1 [(validate.rules).int32.gt = 0];
}
message GetProductDetailResponse {
  Product product = 1;
}

message UploadFileRequest {
  bytes file_data = 1;
  string filename = 2;
  string content_type = 3;
  int64 file_size = 4;
}

message UploadFileResponse {
  string message = 1;
  string file_id = 2;
  string filename = 3;
  int64 file_size = 4;
  string file_url = 5;
}